Fix T37994: crash in preview render after recent color management changes.

Reviewed By: brecht